# easy-ralph

./: .gitignore  PLAN.md  README.md  pyproject.toml
docs/: ablation_study.md  design_test_results.md  feature_trigger_analysis.md
examples/: demo.py
experiments/: exp_concurrency.py  exp_evaluator_anchoring.py  exp_evaluator_anchoring_v2.py  exp_hard_tasks.py  exp_hidden_bugs.py  exp_worker_bugfix.py  exp_worker_reflection.py  exp_worker_reflection_hard.py  runner.py  test_agent_communication.py  test_claude_code_oneshot.py  test_real_task.py  test_temporal_verification.py
experiments/ablation_v2/: README.md  analyze_results.py  run_all.py  run_experiment1.py  run_experiment2.py  run_experiment3.py  run_experiment4.py
experiments/ask_user_question/: test1_basic.py  test2_no_print.py  test3_mixed_tools.py  test4_bypass.py  test5_callback.py
experiments/code_to_prompt/: exp1_reviewer_json.py  exp1_reviewer_json_phase2.py  exp2_evaluator_pivot.py  exp3_planner_tooluse.py  exp4_orchestrator_agent.py  exp5_evaluator_improved.py  exp6_planner_improved.py  exp7_metrics.py  experiment_runner.py  results.md  run_all.py
experiments/efficiency/: README.md  run_experiment.sh
ralph_sdk/: __init__.py  clarifier.py  cli.py  evaluator.py  executor.py  interactive.py  logger.py  mcp_tools.py  metrics.py  models.py  notification.py  orchestrator.py  planner.py  pool.py  prd_generator.py  progress.py  prompts.py  reviewer.py  synthesizer.py  utils.py  worker.py
tests/: test_adversarial.py  test_issues.py  test_mcp_tools.py  test_synthesizer.py
(+39 files in other folders)
